# ActiveScout

./: LICENSE  Makefile  README.md  setup.cfg
.github/workflows/: github-actions.yml
src/ActiveScout/: arguments.py  components.py  dirwalker.py  prodsearch.py  specs.py  tracker.py
src/ActiveScout/main/: main.py
