[metadata]
name = ActiveScout
version = 2.0.0
author = ActiveState
url = https://platform.activestate.com/
description = ActiveScout 2.0
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    activescout = ActiveScout.main.main:main
